feat: Enhance MovieService with Qdrant integration and improve encoding settings
- Added CinemaQdrantService dependency to MovieService for managing movie embeddings.
- Updated application properties to support UTF-8 encoding and adjusted database connection settings.
- Enhanced chatbot intent patterns to include additional drink-related terms.
- Added unit tests for new snack price follow-up scenarios and improved contextual routing in CinemaBot.
- Implemented logic to ignore stale Qdrant matches when movie embeddings are cleared.
- Improved movie discovery service to prioritize semantic plot descriptions over generic titles.
- Added various tests to ensure correct ranking and filtering of movie discovery results based on user queries.